# loon

./: .editorconfig  .gitignore  .gitmodules  Makefile  README.md  TODO.md  config.yaml  go.mod  go.sum
.github/: FUNDING.yml
api/: messages.proto  specification.md
client/: .clang-format  .cmake-format  .env.example  .gitignore  CMakeLists.txt  CMakePresets.json  Doxyfile  Makefile  README.md  README.txt  conanfile.py  vcpkg.json
client/conan/profiles/: linux-gcc-x86_64  mac-clang-armv8  mac-clang-x86_64  windows-msvc-visual-studio-x86_64
client/conan/profiles/compilers/: gcc-13.4
client/examples/: CMakeLists.txt  client.cpp
client/include/loon/: client.h  client.hpp  content.hpp  shared_client.h  shared_client.hpp
client/src/: base64.cpp  base64.hpp  client.cpp  client.h  client.hpp  logging.cpp  logging.h  logging.hpp  request_handler.cpp  request_handler.h  request_handler.hpp  shared_client.cpp  shared_client.h  shared_client.hpp  util.cpp  util.h  util.hpp
client/src/websocket/: backend_libdatachannel.cpp  backend_libhv.cpp  backend_qt.cpp  backend_qt.h  backend_qt.hpp  client.cpp  client.h  client.hpp
client/test/: client_test.cpp  main.cpp  shared_client_test.cpp  shared_reference_counter_test.cpp
client/test/common/: main.cpp  server.config.yml  test.hpp
client/test/server/: main.go  proxy.go
clients/: README.md
clients/cpp/: .clang-format  .cmake-format  .editorconfig  .gitignore  CMakeLists.txt  Doxyfile  Makefile  README.md  README.txt
clients/cpp/cmake/: windeployqt.cmake
clients/cpp/examples/: CMakeLists.txt  client.cpp
clients/cpp/include/: loon.h
clients/cpp/include/loon/: client.h  content.h  loon.h
clients/cpp/loon/: messages.pb.cc  messages.pb.h
clients/cpp/src/: client.cpp  client.h  impl.cpp  internal.h  logging.cpp  logging.h  request_handle.cpp  request_handle.h  request_handler.cpp  request_handler.h  util.cpp  util.h
clients/cpp/src/websocket/: backend_libhv.cpp  backend_qt.cpp  backend_qt.h  client.cpp  client.h
clients/cpp/test/: client_test.cpp  server.config.yml
cmd/loon/: main.go
cmd/loon-client/: main.go
cmd/loon-server/: config.go  main.go  mime.go
cmd/loon/client/: client.go
cmd/loon/server/: config.go  server.go
deployments/: .gitignore  Caddyfile  Makefile  README.md  caddy.env.example  docker-compose.yml  prometheus.yml
deployments/basic-deployment/: Caddyfile  README.md  caddy.env.example  config.yml  docker-compose.yml
deployments/minimal-https-example/: .gitignore  Caddyfile  README.md  caddy.dockerfile  config.yml  docker-compose.yml
deployments/self-signed-prometheus-grafana/: README.md
docs/: index.html
docs/client/: _r_e_a_d_m_e_8md.html  annotated.html  classes.html  classloon_1_1_buffer_content_source-members.html  classloon_1_1_buffer_content_source.html  classloon_1_1_client-members.html  classloon_1_1_client.html  classloon_1_1_client_not_connected_exception.html  classloon_1_1_client_not_started_exception.html  classloon_1_1_content_handle-members.html  classloon_1_1_content_handle.html  classloon_1_1_content_not_registered_exception.html  classloon_1_1_content_source-members.html  classloon_1_1_content_source.html  classloon_1_1_i_client-members.html  classloon_1_1_i_client.html  classloon_1_1_i_shared_client-members.html  classloon_1_1_i_shared_client.html  classloon_1_1_malformed_content_exception.html  classloon_1_1_path_already_registered_exception.html  classloon_1_1_shared_client-members.html  classloon_1_1_shared_client.html  classloon_1_1_timeout_exception.html  classloon_1_1_unacceptable_content_exception.html  client_8h.html  client_8h_source.html  content_8h.html  content_8h_source.html  dir_40497f47bbb996e10e9d13eecf9525ae.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_func.html  functions_vars.html  hierarchy.html  index.html  menudata.js  namespaceloon.html  namespaceloon_1_1internal.html  namespacemembers.html  (+13 more)
docs/client/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  enumvalues_5.js  files_0.js  files_2.js  functions_0.js  (+28 more)
docs/clients/cpp/: _r_e_a_d_m_e_8md.html  annotated.html  classes.html  classloon_1_1_buffer_content_source-members.html  classloon_1_1_buffer_content_source.html  classloon_1_1_client-members.html  classloon_1_1_client.html  classloon_1_1_client_failed_exception.html  classloon_1_1_client_not_connected_exception.html  classloon_1_1_client_not_started_exception.html  classloon_1_1_content_handle-members.html  classloon_1_1_content_handle.html  classloon_1_1_content_not_registered_exception.html  classloon_1_1_content_source-members.html  classloon_1_1_content_source.html  classloon_1_1_i_client-members.html  classloon_1_1_i_client.html  classloon_1_1_not_connected_exception.html  classloon_1_1_path_already_registered_exception.html  classloon_1_1_unacceptable_content_exception.html  client_8h.html  client_8h_source.html  content_8h.html  content_8h_source.html  dir_40497f47bbb996e10e9d13eecf9525ae.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_func.html  functions_vars.html  hierarchy.html  index.html  loon_8h_source.html  menudata.js  namespaceloon.html  namespacemembers.html  namespacemembers_enum.html  namespacemembers_type.html  namespaces.html  structloon_1_1_client_options-members.html  (+5 more)
examples/server/: README.md  config.yaml
pkg/client/: client.go  content.go
pkg/pb/: messages.pb.go
pkg/server/: client.go  client_manager.go  client_test.go  config.go  config_test.go  encoding.go  mac.go  mime.go  server.go  uuid.go
protocol/: specification.md
scripts/: client.sh  server.sh
server/: client.go  client_test.go
server/pb/: messages.pb.go
(+56 files in other folders)
